# poppy-humanoide

./: .gitignore  README.md  cmdopt.py  copelia.py  lib.py  main.py  pyproject.toml
scene/: Poppy_Humanoid.mjcf  scene.xml
src/: callbacks.py  config.py  environment.py  environment_tb.py  eval.py  evaluate.py  mujoco_env.py  mujoco_test.py  paths.py  simulator.py  temp_train.py  test_env.py  train.py  train_example.py  train_tb.py
src/coppelia/: cmdopt.py
src/coppeliasim/: bridge.py  cmdopt.py  stack.py
