[project]
name = "poppy-humanoide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coppeliasim-zmqremoteapi-client>=2.0.4",
    "gymnasium>=1.2.1",
    "numpy>=2.3.3",
    "poppy-humanoid>=3.0.0",
    "pyrep>=3.2.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
